# tmux-scheduler

./: .gitignore  README.md  pyproject.toml  schedule.example.yaml
.github/workflows/: ci.yml  workflow.yml
src/tmux_scheduler/: __init__.py  cli.py  scheduler.py
tests/: test_cli.py  test_scheduler.py
