[tool.poetry]
name = "tmux-scheduler"
version = "0.1.0"
description = "Schedule delayed input to tmux sessions from a YAML file."
authors = []
readme = "README.md"
packages = [{ include = "tmux_scheduler", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
libtmux = ">=0.55,<0.56"
rich = "^14.0.0"
dateparser = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pyright = "^1.1.408"

[tool.poetry.scripts]
tmux-scheduler = "tmux_scheduler.cli:main"

[tool.pyright]
venvPath = "/home/snwu/.venvs"
venv = "tmux-scheduler-zNmFrlcQ-py3.12"
pythonVersion = "3.12"
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
