[tool.poetry]
name = "tmux-scheduler"
version = "1.0.0"
description = "Schedule delayed input to tmux sessions from a YAML file."
authors = ["Shunong Wu <shunongwu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/snwu1996/tmux-scheduler"
repository = "https://github.com/snwu1996/tmux-scheduler"
keywords = ["tmux", "scheduler", "cli", "automation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
packages = [{ include = "tmux_scheduler", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
libtmux = ">=0.55,<0.56"
rich = "^14.0.0"
dateparser = "^1.2.2"
humanize = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pyright = "^1.1.408"

[tool.poetry.scripts]
tmux-scheduler = "tmux_scheduler.cli:main"

[tool.pyright]
pythonVersion = "3.12"
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
